testing components dinamics properties

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,16 +1,16 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img class="big-card__photo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/310px-Placeholder_view_vector.svg.png"
+    <img class="big-card__photo" src="{{photoCover}}"
      alt="" srcset="" height="200px">
   </div>
   <div class="big-card__title">
     <a href="#">
       <h1>
-        Saiu uma nova verção do Angular
+        {{cardTitle}}
       </h1>
     </a>
   </div>
   <div class="big-card__description">
-    <a href="#"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo quaerat placeat ducimus corrupti nesciunt cupiditate ut est architecto, deleniti rerum voluptates quasi quas alias exercitationem magnam! Ex sint aliquid pariatur.</p></a>
+    <a href="#"><p>{{cardDescription}}</p></a>
   </div>
 </div>
