--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,10 +1,10 @@
 <div class="container__small-card">
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img class="small-card__photo" src="https://legadodamarvel.com.br/wp-content/uploads/2022/07/Revelado-quais-serao-as-CINCO-series-da-Marvel-Studios-em-2023-legadodamarvel.webp"
+      <img class="small-card__photo" src="{{photoCover}}"
       alt="" srcset="">
     </div>
-    <div class="small-card__title">
+    <div class="{{cardTitle}}">
       <a href="#">
         <h1>
           Saiu uma nova verção do Angular
