--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,11 +4,12 @@
 <app-menu-title></app-menu-title>
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card></app-big-card>
+    <app-big-card cardDescription="Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo quaerat placeat ducimus corrupti nesciunt cupiditate ut est architecto, deleniti rerum voluptates quasi quas alias exercitationem magnam! Ex sint aliquid pariatur." cardTitle="Titulo da notícia" photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/310px-Placeholder_view_vector.svg.png"></app-big-card>
+    <app-big-card cardDescription="Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo quaerat placeat ducimus corrupti nesciunt cupiditate ut est architecto, deleniti rerum voluptates quasi quas alias exercitationem magnam! Ex sint aliquid pariatur." cardTitle="Outra notícia" photoCover="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/310px-Placeholder_view_vector.svg.png"></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card cardTitle="Mais outro notícia" photoCover="https://legadodamarvel.com.br/wp-content/uploads/2022/07/Revelado-quais-serao-as-CINCO-series-da-Marvel-Studios-em-2023-legadodamarvel.webp"></app-small-card>
+    <app-small-card cardTitle="Mais outro notícia" photoCover="https://legadodamarvel.com.br/wp-content/uploads/2022/07/Revelado-quais-serao-as-CINCO-series-da-Marvel-Studios-em-2023-legadodamarvel.webp"></app-small-card>
+    <app-small-card cardTitle="Mais outro notícia" photoCover="https://legadodamarvel.com.br/wp-content/uploads/2022/07/Revelado-quais-serao-as-CINCO-series-da-Marvel-Studios-em-2023-legadodamarvel.webp"></app-small-card>
   </div>
 </div>
